fix: Add notification when assets are changed (#1198)