@@ -16,10 +16,16 @@
 
 package com.hivemq.pulse.utils;
 
+import com.hivemq.combining.model.DataCombiner;
+import com.hivemq.combining.model.DataCombining;
+import com.hivemq.combining.model.DataCombiningDestination;
+import com.hivemq.combining.model.DataCombiningSources;
+import com.hivemq.combining.model.DataIdentifierReference;
 import com.hivemq.configuration.entity.pulse.PulseAssetEntity;
 import com.hivemq.configuration.entity.pulse.PulseAssetMappingEntity;
 import com.hivemq.configuration.entity.pulse.PulseAssetMappingStatus;
 import com.hivemq.configuration.entity.pulse.PulseEntity;
+import com.hivemq.configuration.reader.AssetMappingExtractor;
 import com.hivemq.configuration.reader.PulseExtractor;
 import com.hivemq.pulse.asset.Asset;
 import org.jetbrains.annotations.NotNull;
@@ -47,6 +53,8 @@ import static org.mockito.Mockito.when;
 public class PulseAgentAssetUtilsTest {
     private static final List<PulseAssetMappingStatus> STATUSES = List.of(PulseAssetMappingStatus.values());
 
+    @Mock
+    private @NotNull AssetMappingExtractor assetMappingExtractor;
     @Mock
     private @NotNull PulseExtractor pulseExtractor;
 
@@ -85,7 +93,7 @@ public class PulseAgentAssetUtilsTest {
     public void whenConfigWithoutLocalAssetsWithoutRemoteAssetsAndWithoutMappings_thenLocalAssetsShouldBeCleared() {
         final PulseEntity pulseEntity = new PulseEntity();
         when(pulseExtractor.getPulseEntity()).thenReturn(pulseEntity);
-        PulseAgentAssetUtils.resolveDiff(pulseExtractor, List.of());
+        PulseAgentAssetUtils.resolveDiff(assetMappingExtractor, pulseExtractor, List.of());
         verify(pulseExtractor).setPulseEntity(pulseEntityArgumentCaptor.capture());
         final PulseEntity newPulseEntity = pulseEntityArgumentCaptor.getValue();
         assertThat(newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities()).hasSize(0);
@@ -96,7 +104,7 @@ public class PulseAgentAssetUtilsTest {
         final PulseEntity pulseEntity = new PulseEntity();
         pulseEntity.getPulseAssetsEntity().setPulseAssetEntities(localAssets);
         when(pulseExtractor.getPulseEntity()).thenReturn(pulseEntity);
-        PulseAgentAssetUtils.resolveDiff(pulseExtractor, List.of());
+        PulseAgentAssetUtils.resolveDiff(assetMappingExtractor, pulseExtractor, List.of());
         verify(pulseExtractor).setPulseEntity(pulseEntityArgumentCaptor.capture());
         final PulseEntity newPulseEntity = pulseEntityArgumentCaptor.getValue();
         assertThat(newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities()).hasSize(0);
@@ -106,7 +114,7 @@ public class PulseAgentAssetUtilsTest {
     public void whenConfigWithoutLocalAssetsAndWithMappings_thenMappingsShouldBeCleared() {
         final PulseEntity pulseEntity = new PulseEntity();
         when(pulseExtractor.getPulseEntity()).thenReturn(pulseEntity);
-        PulseAgentAssetUtils.resolveDiff(pulseExtractor, remoteAssets);
+        PulseAgentAssetUtils.resolveDiff(assetMappingExtractor, pulseExtractor, remoteAssets);
         verify(pulseExtractor).setPulseEntity(pulseEntityArgumentCaptor.capture());
         final PulseEntity newPulseEntity = pulseEntityArgumentCaptor.getValue();
         assertThat(newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities()).isEqualTo(localAssets);
@@ -119,7 +127,7 @@ public class PulseAgentAssetUtilsTest {
                 .getPulseAssetEntities()
                 .forEach(e -> e.getMapping().setId(UUID.randomUUID()));
         when(pulseExtractor.getPulseEntity()).thenReturn(pulseEntity);
-        PulseAgentAssetUtils.resolveDiff(pulseExtractor, remoteAssets);
+        PulseAgentAssetUtils.resolveDiff(assetMappingExtractor, pulseExtractor, remoteAssets);
         verify(pulseExtractor).setPulseEntity(pulseEntityArgumentCaptor.capture());
         final PulseEntity newPulseEntity = pulseEntityArgumentCaptor.getValue();
         assertThat(newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities()).isEqualTo(localAssets);
@@ -131,14 +139,15 @@ public class PulseAgentAssetUtilsTest {
         final UUID mappingId = UUID.randomUUID();
         pulseEntity.getPulseAssetsEntity()
                 .getPulseAssetEntities()
-                .add(localAssets.get(0)
+                .add(localAssets.getFirst()
                         .withMapping(PulseAssetMappingEntity.builder()
                                 .id(mappingId)
                                 .status(PulseAssetMappingStatus.STREAMING)
                                 .build()));
         when(pulseExtractor.getPulseEntity()).thenReturn(pulseEntity);
-        PulseAgentAssetUtils.resolveDiff(pulseExtractor,
-                List.of(remoteAssets.get(0)
+        PulseAgentAssetUtils.resolveDiff(assetMappingExtractor,
+                pulseExtractor,
+                List.of(remoteAssets.getFirst()
                         .withName("Updated Name")
                         .withDescription("Updated Description")
                         .withTopic("updated/topic")
@@ -146,8 +155,8 @@ public class PulseAgentAssetUtilsTest {
         verify(pulseExtractor).setPulseEntity(pulseEntityArgumentCaptor.capture());
         final PulseEntity newPulseEntity = pulseEntityArgumentCaptor.getValue();
         assertThat(newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities()).hasSize(1);
-        final PulseAssetEntity asset = newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities().get(0);
-        assertThat(asset.getId()).isEqualTo(localAssets.get(0).getId());
+        final PulseAssetEntity asset = newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities().getFirst();
+        assertThat(asset.getId()).isEqualTo(localAssets.getFirst().getId());
         assertThat(asset.getName()).isEqualTo("Updated Name");
         assertThat(asset.getDescription()).isEqualTo("Updated Description");
         assertThat(asset.getTopic()).isEqualTo("updated/topic");
@@ -162,18 +171,15 @@ public class PulseAgentAssetUtilsTest {
             final PulseAssetMappingStatus status = STATUSES.get(i);
             final PulseEntity pulseEntity = new PulseEntity();
             final UUID mappingId = UUID.randomUUID();
-            final PulseAssetEntity expectedAsset = localAssets.get(0)
-                    .withMapping(PulseAssetMappingEntity.builder()
-                            .id(mappingId)
-                            .status(status)
-                            .build());
+            final PulseAssetEntity expectedAsset = localAssets.getFirst()
+                    .withMapping(PulseAssetMappingEntity.builder().id(mappingId).status(status).build());
             pulseEntity.getPulseAssetsEntity().getPulseAssetEntities().add(expectedAsset);
             when(pulseExtractor.getPulseEntity()).thenReturn(pulseEntity);
-            PulseAgentAssetUtils.resolveDiff(pulseExtractor, List.of());
+            PulseAgentAssetUtils.resolveDiff(assetMappingExtractor, pulseExtractor, List.of());
             verify(pulseExtractor, times(i + 1)).setPulseEntity(pulseEntityArgumentCaptor.capture());
             final PulseEntity newPulseEntity = pulseEntityArgumentCaptor.getValue();
             assertThat(newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities()).hasSize(1);
-            final PulseAssetEntity asset = newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities().get(0);
+            final PulseAssetEntity asset = newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities().getFirst();
             assertThat(asset.getId()).isEqualTo(expectedAsset.getId());
             assertThat(asset.getName()).isEqualTo(expectedAsset.getName());
             assertThat(asset.getDescription()).isEqualTo(expectedAsset.getDescription());
@@ -195,18 +201,15 @@ public class PulseAgentAssetUtilsTest {
             final PulseAssetMappingStatus status = STATUSES.get(i);
             final PulseEntity pulseEntity = new PulseEntity();
             final UUID mappingId = UUID.randomUUID();
-            final PulseAssetEntity expectedAsset = localAssets.get(0)
-                    .withMapping(PulseAssetMappingEntity.builder()
-                            .id(mappingId)
-                            .status(status)
-                            .build());
+            final PulseAssetEntity expectedAsset = localAssets.getFirst()
+                    .withMapping(PulseAssetMappingEntity.builder().id(mappingId).status(status).build());
             pulseEntity.getPulseAssetsEntity().getPulseAssetEntities().add(expectedAsset);
             when(pulseExtractor.getPulseEntity()).thenReturn(pulseEntity);
-            PulseAgentAssetUtils.resolveDiff(pulseExtractor, List.of(remoteAssets.get(0)));
+            PulseAgentAssetUtils.resolveDiff(assetMappingExtractor, pulseExtractor, List.of(remoteAssets.getFirst()));
             verify(pulseExtractor, times(i + 1)).setPulseEntity(pulseEntityArgumentCaptor.capture());
             final PulseEntity newPulseEntity = pulseEntityArgumentCaptor.getValue();
             assertThat(newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities()).hasSize(1);
-            final PulseAssetEntity asset = newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities().get(0);
+            final PulseAssetEntity asset = newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities().getFirst();
             assertThat(asset.getId()).isEqualTo(expectedAsset.getId());
             assertThat(asset.getName()).isEqualTo(expectedAsset.getName());
             assertThat(asset.getDescription()).isEqualTo(expectedAsset.getDescription());
@@ -227,19 +230,33 @@ public class PulseAgentAssetUtilsTest {
         IntStream.range(0, STATUSES.size()).forEach(i -> {
             final PulseAssetMappingStatus status = STATUSES.get(i);
             final PulseEntity pulseEntity = new PulseEntity();
-            final PulseAssetEntity expectedAsset = localAssets.get(0)
+            final PulseAssetEntity expectedAsset = localAssets.getFirst()
                     .withMapping(PulseAssetMappingEntity.builder().id(UUID.randomUUID()).status(status).build());
             pulseEntity.getPulseAssetsEntity().getPulseAssetEntities().add(expectedAsset);
             when(pulseExtractor.getPulseEntity()).thenReturn(pulseEntity);
-            PulseAgentAssetUtils.resolveDiff(pulseExtractor,
-                    List.of(remoteAssets.get(0)
+            DataCombiner expectedDataCombiner = null;
+            if (status == PulseAssetMappingStatus.STREAMING) {
+                expectedDataCombiner = new DataCombiner(UUID.randomUUID(),
+                        "name",
+                        "description",
+                        List.of(),
+                        List.of(new DataCombining(expectedAsset.getMapping().getId(),
+                                new DataCombiningSources(new DataIdentifierReference("source-id",
+                                        DataIdentifierReference.Type.PULSE_ASSET), List.of(), List.of()),
+                                new DataCombiningDestination(expectedAsset.getId().toString(), "topic", "{}"),
+                                List.of())));
+                when(assetMappingExtractor.getAllCombiners()).thenReturn(List.of(expectedDataCombiner));
+            }
+            PulseAgentAssetUtils.resolveDiff(assetMappingExtractor,
+                    pulseExtractor,
+                    List.of(remoteAssets.getFirst()
                             .withName("Updated Name")
                             .withTopic("updated/topic")
                             .withJsonSchema("{ \"name\": \"Updated Name\" }")));
             verify(pulseExtractor, times(i + 1)).setPulseEntity(pulseEntityArgumentCaptor.capture());
             final PulseEntity newPulseEntity = pulseEntityArgumentCaptor.getValue();
             assertThat(newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities()).hasSize(1);
-            final PulseAssetEntity asset = newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities().get(0);
+            final PulseAssetEntity asset = newPulseEntity.getPulseAssetsEntity().getPulseAssetEntities().getFirst();
             assertThat(asset.getId()).isEqualTo(expectedAsset.getId());
             assertThat(asset.getName()).isEqualTo("Updated Name");
             assertThat(asset.getTopic()).isEqualTo("updated/topic");
@@ -248,8 +265,17 @@ public class PulseAgentAssetUtilsTest {
             switch (status) {
                 case DRAFT, REQUIRES_REMAPPING, UNMAPPED ->
                         assertThat(asset.getMapping().getStatus()).isEqualTo(status);
-                case STREAMING -> assertThat(asset.getMapping()
-                        .getStatus()).isEqualTo(PulseAssetMappingStatus.REQUIRES_REMAPPING);
+                case STREAMING -> {
+                    assertThat(asset.getMapping().getStatus()).isEqualTo(PulseAssetMappingStatus.REQUIRES_REMAPPING);
+                    verify(assetMappingExtractor).getAllCombiners();
+                    final ArgumentCaptor<List<DataCombiner>> dataCombinersArgumentCaptor =
+                            ArgumentCaptor.forClass(List.class);
+                    verify(assetMappingExtractor).updateDataCombiners(dataCombinersArgumentCaptor.capture());
+                    final List<DataCombiner> dataCombiners = dataCombinersArgumentCaptor.getValue();
+                    assertThat(dataCombiners).isNotNull();
+                    assertThat(dataCombiners).hasSize(1);
+                    assertThat(dataCombiners.getFirst()).isEqualTo(expectedDataCombiner);
+                }
                 case MISSING -> assertThat(asset.getMapping().getStatus()).isEqualTo(PulseAssetMappingStatus.UNMAPPED);
                 default -> fail("Unhandled status: " + status);
             }
